--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
        </button>
       </div>
       <div class="mt-6 text-center">
-       <img alt=height="400" src="https://storage.googleapis.com/a1aa/image/m2ydCgo3XvW_FHT4OjU8jBqu47wX_amNaECRog9M5Mw.jpg" width="600"/>
+       <img alt=height="400" src="rrr.jpg" width="600"/>
       </div>
      </div>
     </div>
