--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
        </button>
       </div>
       <div class="mt-6 text-center">
-       <img src="rrrr.jpg" alt="A placeholder image representing a bank statement or financial document" height="400" width="600"/>
+       <p>র শুভরে ডলার গুলা দিয়া দিতে কইছে</p>
       </div>
      </div>
     </div>
